# qti

./: .gitignore  Cargo.toml  README.md  example_quiz.txt  great_depression.txt
cfw-qti/: .gitignore  AI_FEATURES.md  Cargo.toml  DEPLOY.md  README.md  test_ai_quiz.json  test_quiz.json  wrangler.toml
cfw-qti/src/: ai_handlers.rs  ai_html.rs  handlers.rs  html.rs  lib.rs
qti-cli/: Cargo.toml
qti-cli/src/: main.rs
qti-lib/: Cargo.toml
qti-lib/src/: builder.rs  exporter.rs  generator.rs  lib.rs  parser.rs  schema.rs  types.rs  validator.rs
spec/1.2/: ims_qtilitev1p2p1.xsd  imsqti_addv1p2p1.html  imsqti_asi_bindv1p2.html  imsqti_oviewv1p2.html
src/: builder.rs  error.rs  exporter.rs  generator.rs  lib.rs  main.rs  parser.rs  schema.rs  validator.rs
