[workspace]
members = [
    "cfw-qti",
    "qti-cli",
    "qti-lib",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Connor Hindley"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
nom = "7.1"
pulldown-cmark = "0.12"
regex = "1.10"
serde-xml-rs = "0.6"
serde_json = "1.0"
thiserror = "1.0"
worker = "0.6"
xmltree = "0.10"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[workspace.dependencies.clap]
version = "4.5"
features = ["derive"]

[workspace.dependencies.qti-lib]
path = "qti-lib"

[workspace.dependencies.quick-xml]
version = "0.36"
features = ["serialize"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.uuid]
version = "1.8"
features = ["v4", "js"]

# Optimize for size in release builds (important for Cloudflare Workers)
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
