[package]
name = "qti-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A schema-driven QTI (Question and Test Interoperability) file generator"

[dependencies]
# XML processing and validation
quick-xml.workspace = true
serde.workspace = true
serde-xml-rs.workspace = true
xmltree.workspace = true

# Text parsing
nom.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true

# File handling and compression
zip.workspace = true
base64.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utils
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
